--- a/client/sender.html
+++ b/client/sender.html
@@ -8,7 +8,7 @@
   <input id="message" />
   <button id="sendbutton">send</button>
   <script>
-    var port, id, broker="http://peerjstest11.herokuapp.com";//="http://localhost:9000";
+    var port, id, broker="http://localhost:7000";
     const connectbutton = document.querySelector('#connectbutton');
     const r_id = document.querySelector('#r_id');
     const statusbox = document.querySelector('#status');
@@ -26,8 +26,8 @@
       let idbox = document.querySelector('#id');
       let messagebox = document.querySelector('#message');
       let sendbutton = document.querySelector('#sendbutton');
-      // const peer = new Peer('receiver', { host: 'http://peerjstest11.herokuapp.com/peerjs/', port: 9000, path: '/' })
-      const peer = new Peer(s_id, { host: 'peerjstest11.herokuapp.com', port: port, path: '/peerjs' })
+      const peer = new Peer(s_id, { host: 'localhost', port: 7000, path: '/peerjs' })
+      // const peer = new Peer(s_id, { host: 'peerjstest11.herokuapp.com', port: port, path: '/' })
       
       peer.on('error', (err) => {
         console.log(err);
